# 2D_Dragon_Game

./: .gitignore  CMakeLists.txt  README.md
2D_Game_Engine/: AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Enemies.cpp  Enemies.h  Game.cpp  Game.h  GameObject.cpp  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
2D_Game_Engine.xcodeproj/: project.pbxproj
2D_Game_Engine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
2D_Game_Engine.xcodeproj/xcshareddata/xcschemes/: 2D_Game_Engine.xcscheme
2D_Game_Engine.xcodeproj/xcuserdata/yuqiliu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
2D_Game_Engine.xcodeproj/xcuserdata/yuqiliu.xcuserdatad/xcschemes/: xcschememanagement.plist
2D_Game_Engine/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  EnemyComponent.h  KeyboardController.h  ProjectileComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UILabel.h
2D_Game_Engine/assets/: Untitled.xcf  map.map
src/: AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Enemies.h  Game.cpp  Game.h  GameObject.h  Map.h  main.cpp
src/ECS/: ColliderComponent.h  ECS.h  EnemyComponent.h  KeyboardController.h  ProjectileComponent.h  SpriteComponent.h  TransformComponent.h
src/assets/: enemies.map
