cmake_minimum_required(VERSION 3.13)
project(BURN_THEM_ALL)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/ECS)
include_directories(Dependencies)
include_directories(Dependencies/sdl2)
include_directories(Dependencies/sdl2/include)
include_directories(Dependencies/sdl2/include/SDL2)
include_directories(Dependencies/sdl2_image)
include_directories(Dependencies/sdl2_image/include)
include_directories(Dependencies/sdl2_image/include/SDL2)
include_directories(Dependencies/sdl2_ttf)
include_directories(Dependencies/sdl2_ttf/include)
include_directories(Dependencies/sdl2_ttf/include/SDL2)

add_executable(BURN_THEM_ALL
        src/ECS/Animation.h
        src/ECS/ColliderComponent.h
        src/ECS/Components.h
        src/ECS/ECS.cpp
        src/ECS/ECS.h
        src/ECS/EnemyComponent.h
        src/ECS/KeyboardController.h
        src/ECS/ProjectileComponent.h
        src/ECS/SpriteComponent.h
        src/ECS/TileComponent.h
        src/ECS/TransformComponent.h
        src/ECS/UILabel.h
        src/AssetManager.cpp
        src/AssetManager.h
        src/Collision.cpp
        src/Collision.h
        src/Enemies.cpp
        src/Enemies.h
        src/Game.cpp
        src/Game.h
        src/GameObject.cpp
        src/GameObject.h
        src/main.cpp
        src/Map.cpp
        src/Map.h
        src/TextureManager.cpp
        src/TextureManager.h
        src/Vector2D.cpp
        src/Vector2D.h
        Dependencies/sdl2/include/SDL2/begin_code.h
        Dependencies/sdl2/include/SDL2/close_code.h
        Dependencies/sdl2/include/SDL2/SDL.h
        Dependencies/sdl2/include/SDL2/SDL_assert.h
        Dependencies/sdl2/include/SDL2/SDL_atomic.h
        Dependencies/sdl2/include/SDL2/SDL_audio.h
        Dependencies/sdl2/include/SDL2/SDL_bits.h
        Dependencies/sdl2/include/SDL2/SDL_blendmode.h
        Dependencies/sdl2/include/SDL2/SDL_clipboard.h
        Dependencies/sdl2/include/SDL2/SDL_config.h
        Dependencies/sdl2/include/SDL2/SDL_cpuinfo.h
        Dependencies/sdl2/include/SDL2/SDL_egl.h
        Dependencies/sdl2/include/SDL2/SDL_endian.h
        Dependencies/sdl2/include/SDL2/SDL_error.h
        Dependencies/sdl2/include/SDL2/SDL_events.h
        Dependencies/sdl2/include/SDL2/SDL_filesystem.h
        Dependencies/sdl2/include/SDL2/SDL_gamecontroller.h
        Dependencies/sdl2/include/SDL2/SDL_gesture.h
        Dependencies/sdl2/include/SDL2/SDL_haptic.h
        Dependencies/sdl2/include/SDL2/SDL_hints.h
        Dependencies/sdl2/include/SDL2/SDL_joystick.h
        Dependencies/sdl2/include/SDL2/SDL_keyboard.h
        Dependencies/sdl2/include/SDL2/SDL_keycode.h
        Dependencies/sdl2/include/SDL2/SDL_loadso.h
        Dependencies/sdl2/include/SDL2/SDL_log.h
        Dependencies/sdl2/include/SDL2/SDL_main.h
        Dependencies/sdl2/include/SDL2/SDL_messagebox.h
        Dependencies/sdl2/include/SDL2/SDL_mouse.h
        Dependencies/sdl2/include/SDL2/SDL_mutex.h
        Dependencies/sdl2/include/SDL2/SDL_name.h
        Dependencies/sdl2/include/SDL2/SDL_opengl.h
        Dependencies/sdl2/include/SDL2/SDL_opengl_glext.h
        Dependencies/sdl2/include/SDL2/SDL_opengles.h
        Dependencies/sdl2/include/SDL2/SDL_opengles2.h
        Dependencies/sdl2/include/SDL2/SDL_opengles2_gl2.h
        Dependencies/sdl2/include/SDL2/SDL_opengles2_gl2ext.h
        Dependencies/sdl2/include/SDL2/SDL_opengles2_gl2platform.h
        Dependencies/sdl2/include/SDL2/SDL_opengles2_khrplatform.h
        Dependencies/sdl2/include/SDL2/SDL_pixels.h
        Dependencies/sdl2/include/SDL2/SDL_platform.h
        Dependencies/sdl2/include/SDL2/SDL_power.h
        Dependencies/sdl2/include/SDL2/SDL_quit.h
        Dependencies/sdl2/include/SDL2/SDL_rect.h
        Dependencies/sdl2/include/SDL2/SDL_render.h
        Dependencies/sdl2/include/SDL2/SDL_revision.h
        Dependencies/sdl2/include/SDL2/SDL_rwops.h
        Dependencies/sdl2/include/SDL2/SDL_scancode.h
        Dependencies/sdl2/include/SDL2/SDL_sensor.h
        Dependencies/sdl2/include/SDL2/SDL_shape.h
        Dependencies/sdl2/include/SDL2/SDL_stdinc.h
        Dependencies/sdl2/include/SDL2/SDL_surface.h
        Dependencies/sdl2/include/SDL2/SDL_system.h
        Dependencies/sdl2/include/SDL2/SDL_syswm.h
        Dependencies/sdl2/include/SDL2/SDL_test.h
        Dependencies/sdl2/include/SDL2/SDL_test_assert.h
        Dependencies/sdl2/include/SDL2/SDL_test_common.h
        Dependencies/sdl2/include/SDL2/SDL_test_compare.h
        Dependencies/sdl2/include/SDL2/SDL_test_crc32.h
        Dependencies/sdl2/include/SDL2/SDL_test_font.h
        Dependencies/sdl2/include/SDL2/SDL_test_fuzzer.h
        Dependencies/sdl2/include/SDL2/SDL_test_harness.h
        Dependencies/sdl2/include/SDL2/SDL_test_images.h
        Dependencies/sdl2/include/SDL2/SDL_test_log.h
        Dependencies/sdl2/include/SDL2/SDL_test_md5.h
        Dependencies/sdl2/include/SDL2/SDL_test_memory.h
        Dependencies/sdl2/include/SDL2/SDL_test_random.h
        Dependencies/sdl2/include/SDL2/SDL_thread.h
        Dependencies/sdl2/include/SDL2/SDL_timer.h
        Dependencies/sdl2/include/SDL2/SDL_touch.h
        Dependencies/sdl2/include/SDL2/SDL_types.h
        Dependencies/sdl2/include/SDL2/SDL_version.h
        Dependencies/sdl2/include/SDL2/SDL_video.h
        Dependencies/sdl2/include/SDL2/SDL_vulkan.h
        Dependencies/sdl2_image/include/SDL2/SDL_image.h
        Dependencies/sdl2_ttf/include/SDL2/SDL_ttf.h)

target_link_libraries(BURN_THEM_ALL ${CMAKE_SOURCE_DIR}/Dependencies/sdl2/lib/libSDL2-2.0.0.dylib)
target_link_libraries(BURN_THEM_ALL ${CMAKE_SOURCE_DIR}/Dependencies/sdl2_image/lib/libSDL2_image-2.0.0.dylib)
target_link_libraries(BURN_THEM_ALL ${CMAKE_SOURCE_DIR}/Dependencies/sdl2_ttf/lib/libSDL2_ttf-2.0.0.dylib)

